add more voting questions

--- a/app/static/css/pages/booking.css
+++ b/app/static/css/pages/booking.css
@@ -99,6 +99,7 @@
     align-items: center;
     gap: 10px;
     flex-shrink: 0;
+    font-size: 1em;
 }
 
 .booking-filter-container .filter-right {
