--- a/app/templates/agenda.html
+++ b/app/templates/agenda.html
@@ -335,7 +335,13 @@
         var pathways = {{ pathways| tojson | safe }};
         var pathwayMap = {{ pathway_mapping| tojson | safe }};
         var groupedPathways = {{ pathways| tojson | safe }};
-        var GENERIC_PROJECT_ID = "{{ GENERIC_PROJECT_ID }}";
+        var ProjectID = {
+            GENERIC: {{ ProjectID.GENERIC }},
+        TOPICSMASTER_PROJECT: {{ ProjectID.TOPICSMASTER_PROJECT }},
+        KEYNOTE_SPEAKER_PROJECT: {{ ProjectID.KEYNOTE_SPEAKER_PROJECT }},
+        MODERATOR_PROJECT: {{ ProjectID.MODERATOR_PROJECT }},
+        EVALUATION_PROJECTS: {{ ProjectID.EVALUATION_PROJECTS | tojson | safe }}
+        };
     </script>
     <script src="{{ url_for('static', filename='js/speech_modal.js') }}"></script>
     <script src="{{ url_for('static', filename='js/agenda.js') }}"></script>
